# libseek-thermal

./: .gitignore  CMakeLists.txt
cmake/: FindLibusb.cmake
lib/: CMakeLists.txt
